-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    4.1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2012 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 4.1
-----------------

3/13/13
    - Empty 'got' and 'expected' arguments to t_is() now
      count as a passing test instead of an error, as long as
      the dimensions match.

2/12/13
    - Fixed bug causing value of opt.verbose to be ignored in
      qps_gurobi().

12/14/12
    - Removed code in fmincopf() that attempts to find an interior
      starting point when using the interior point solver. It did
      not seem to help and caused errors for certain cases with
      DC lines (and probably other extensions).

10/1/12
    - Updates to have_fcn() and mpver() to better handle case where
      Optimization Toolbox is installed, but with a valid license.

8/30/12
    - Major speed-up in @opt_model/linear_constraints() by building
      transpose of A (assigning to full columns) then transposing
      back as opposed to building A directly (assigning full rows).

8/1/12
    - Added function margcost() for computing the marginal cost of
      generation.

7/20/12
    - Added utility function @opt_model/describe_idx() to indentify
      variable, constraint or cost row indices to aid in debugging.

7/18/12
    - Made N optional field (default is identity matrix) in
      @opt_model/add_costs().
    - Added missing optional 2nd arg to @opt_model/build_cost_params().

6/26/12
    - Fixed a bug in the new @opt_model/add_vars when adding a var
      set of dimension zero.

6/18/12
    - Updated Gurobi interface for compatibility with native Matlab
      support introduced in Gurobi 5.
      INCOMPATIBLE CHANGE: No longer works with older Gurobi 4.x/
      gurobi_mex() interface.
    
5/3/12
    - Reimplementated @opf_model class as sub-class of the new